--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,15 @@
 body {
     font-family: "Open Sans", sans-serif;
+    background: rgb(235, 227, 127);
 }
 
 h1, h2, h3 {
     font-family: "Lobster", cursive;
 }
 
-h2 {
-    color: #3046C5;
+
+h2, h3 {
+    color: #15aa96;
 }
 
 header h2 {
@@ -15,25 +17,31 @@ header h2 {
 }
 
 .site-footer {
-    background-image: linear-gradient(#C3C8FF, white);
+    background-image: linear-gradient(to bottom, #24bfca, #39e916);
     padding: 20px 0;
+    color: #d84343;
 }
 
 .jumbotron {
     margin: 0;
     padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+    background-image: linear-gradient(to top, #99e014, #e95216);
     color: white;
 }
 
 .row-content {
     padding: 50px 0;
-    border-bottom: 1px ridge;
+    border-bottom: 3px ridge rgba(64, 86, 148, 0.986);
+    min-height: 200px;
+}
+
+.row-content-final {
+    padding: 50px 0;
     min-height: 200px;
 }
 
 .navbar {
-    background-color: #901CAD;
+    background-color: rgba(64, 86, 148, 0.986);
 }
 
 /* .tab-content {
@@ -52,5 +60,33 @@ a, a:hover {
 }
 
 .carousel {
-    border: solid #5637DD;
+    border: solid rgba(64, 86, 148, 0.986);
+}
+
+.img-thumbnail {
+    background:rgba(64, 86, 148, 0.986);
+}
+
+.card {
+    background-color: rgb(118, 250, 114);
+}
+
+.modal-body {
+    background-color: rgb(250, 202, 114);
+}
+
+.contact-button{
+    color:rgb(235, 227, 127);
+}
+
+.contact-button:hover {
+    color:rgb(161, 151, 8);
+}
+
+.breadcrumb {
+    background-color: rgb(226, 170, 14);
+}
+
+#blockquote-section {
+    background: yellow;
 }
