--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,20 @@ h1, h2, h3 {
     font-family: "Lobster", cursive;
 }
 
-
 h2, h3 {
     color: #15aa96;
 }
 
+.modal-header h3 {
+    color: rgb(250, 202, 114);
+}
+
 header h2 {
     color: #CEC8FF;
+}
+
+#login-modal-header {
+    color: yellow;
 }
 
 .site-footer {
@@ -44,12 +51,6 @@ header h2 {
     background-color: rgba(64, 86, 148, 0.986);
 }
 
-/* .tab-content {
-    border: 1px solid #DDD;
-    border-top: none;
-    padding: 10px;
-} */
-
 a, a:hover {
     color: inherit;
     text-decoration: none;
@@ -68,7 +69,7 @@ a, a:hover {
 }
 
 .card {
-    background-color: rgb(118, 250, 114);
+    background-color: rgba(118, 250, 114, 0.603);
 }
 
 .modal-body {
@@ -87,6 +88,6 @@ a, a:hover {
     background-color: rgb(226, 170, 14);
 }
 
-#blockquote-section {
-    background: yellow;
+#blockquote-card {
+    background-color: rgba(220, 250, 114, 0.705);
 }
